# simulation

./: LICENSE  README.md  pyproject.toml
src/simulation/: commands.py  coordinates.py  entities.py  factory.py  launcher.py  path_finder.py  setup.py  world.py  world_simulation.py
src/simulation/actions/: action.py  fill_world.py  make_move.py  refill_actions.py  remove_entities.py  respawn_entities.py
src/simulation/configs/: attributes.toml  config.py  config.toml  game_config.toml
src/simulation/configs/locales/: en.toml  ru.toml
src/simulation/renderers/: cli_renderer.py  renderer.py
