[project]
name = "simulation"
version = "0.1.0"
description = "Simple 2D Wild World Simulation"
readme = "README.md"
authors = [
    { name = "maff1337", email = "yakdm@duck.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
simulation = "simulation.launcher:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
